# VegDet

./: .gitignore  README.md  pyproject.toml
training/: Untitled.ipynb  Untitled1.ipynb  detector_training.ipynb  label_map.json  label_map.pbtxt  label_map_transformer.py  model.tflite
vegdet/: __main__.py  inference.py  preprocess.py  presenter.py  source.py
vegdet/classifier/: __init__.py  presenter.py
